--- a/desktop/style.css
+++ b/desktop/style.css
@@ -32,7 +32,7 @@ body {
 .icon.max {
   background-image: url("max.svg");
 }
-.icon.demax {
+.maximized .icon.max {
   background-image: url("demax.svg");
 }
 .icon.close {
@@ -90,6 +90,12 @@ body {
 .win.initial-size {
   width: 200px;
   height: 200px;
+}
+.win.maximized {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 .win.hidden {
   display: none;
