--- a/desktop/style.css
+++ b/desktop/style.css
@@ -121,6 +121,13 @@ body {
 .wintop .icon:hover {
   background-color: #EEE;
 }
+.win .content {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: calc(100% - 32px);
+}
 
 .bottom-bg {
   position: absolute;
@@ -130,7 +137,6 @@ body {
   background-image: url("http://www.planwallpaper.com/static/images/kartandtinki1_photo-wallpapers_02.jpg");
   background-position: right bottom;
   -webkit-filter: blur(5px);
-  -moz-filter: blur(5px);
   border-top: 1px solid #A03;
 }
 .bottom {
