--- a/desktop/style.css
+++ b/desktop/style.css
@@ -103,6 +103,7 @@ body {
   width: 100%;
   height: 32px;
   position: relative;
+  border-bottom: 3px solid #CCC;
 }
 .wintop .left {
   position: absolute;
