--- a/desktop/style.css
+++ b/desktop/style.css
@@ -86,8 +86,8 @@ body {
   overflow: auto;
   position: absolute;
   border: 3px solid #CCC;
-  width: 200px;
-  height: 200px;
+  width: 206px;
+  height: 206px;
 }
 .win.maximized {
   top: 0;
@@ -99,11 +99,12 @@ body {
   display: none;
 }
 .wintop {
+  position: absolute;
+  top: 3px;
+  left: 3px;
   background-color: #CCC;
-  width: 100%;
+  width: calc(100% - 6px);
   height: 32px;
-  position: relative;
-  border-bottom: 3px solid #CCC;
 }
 .wintop .left {
   position: absolute;
@@ -124,10 +125,10 @@ body {
 }
 .win .content {
   position: absolute;
-  bottom: 0;
-  right: 0;
+  top: 38px;
+  right: 3px;
   width: 100%;
-  height: calc(100% - 32px);
+  height: calc(100% - 41px);
 }
 
 .bottom-bg {
