--- a/desktop/style.css
+++ b/desktop/style.css
@@ -85,12 +85,13 @@ body {
   resize: both;
   overflow: auto;
   position: absolute;
-  width: 206px;
-  height: 206px;
+  width: 209px;
+  height: 209px;
 }
 .win.maximized {
   top: 0;
   left: 0;
+  resize: none;
   width: 100%;
   height: 100%;
 }
@@ -127,7 +128,7 @@ body {
   top: 38px;
   right: 3px;
   width: 100%;
-  height: calc(100% - 41px);
+  height: calc(100% - 47px);
 }
 
 .bottom-bg {
