--- a/desktop/style.css
+++ b/desktop/style.css
@@ -126,8 +126,8 @@ body {
 .win .content {
   position: absolute;
   top: 38px;
-  right: 3px;
-  width: 100%;
+  left: 3px;
+  width: calc(100% - 6px);
   height: calc(100% - 47px);
 }
 
