--- a/desktop/style.css
+++ b/desktop/style.css
@@ -11,7 +11,7 @@
   font-family: "bau";
   font-weight: 400;
   font-style: normal;
-  
+  outline: none;
 }
 body {
   background-image: url("http://www.planwallpaper.com/static/images/kartandtinki1_photo-wallpapers_02.jpg");
