--- a/threedee/style.css
+++ b/threedee/style.css
@@ -1,9 +1,10 @@
 html, body, canvas {
-	margin: 0;
-	width: 100%;
-	height: 100%;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  background: #000;
 }
 
 p {
-	text-align: center;
+  text-align: center;
 }
